Add tvos target framework

--- a/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS.csproj
+++ b/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS.csproj
@@ -139,13 +139,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlertViewController.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="ViewController.cs" />
