--- a/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS.csproj
+++ b/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS.csproj
@@ -163,5 +163,8 @@
       <Name>Sentry.Xamarin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\login_background_logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\TVOS\Xamarin.TVOS.CSharp.targets" />
 </Project>
