--- a/Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
+++ b/Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
@@ -70,6 +70,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dependencies\NativeCrash.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -106,6 +107,10 @@
     <ProjectReference Include="..\..\Src\Sentry.Xamarin\Sentry.Xamarin.csproj">
       <Project>{c911dd4b-bcdc-4d76-83d1-dc40379df816}</Project>
       <Name>Sentry.Xamarin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Forms\com.sentry.ovenlibrary\com.sentry.ovenlibrary.csproj">
+      <Project>{41a5d0e6-4dea-44ff-a357-b76090dd733e}</Project>
+      <Name>com.sentry.ovenlibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.Xamarin.Core\Sample.Xamarin.Core.csproj">
       <Project>{02726caa-72f3-4e3c-b06d-51c77a4b82bd}</Project>
