Fix Nulll reference on SentryXamarinFormsIntegration.Register and increased timeout from 3.5 Seconds to 7 seconds.

--- a/Tests/Sentry.Xamarin.Forms.Testing/Sentry.Xamarin.Forms.Testing.csproj
+++ b/Tests/Sentry.Xamarin.Forms.Testing/Sentry.Xamarin.Forms.Testing.csproj
@@ -1,5 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Src\Sentry.Xamarin.Forms\Sentry.Xamarin.Forms.csproj" />
+  </ItemGroup>
 </Project>
