--- a/Tests/Sentry.Xamarin.Forms.UWP.Tests/Sentry.Xamarin.Forms.UWP.Tests.csproj
+++ b/Tests/Sentry.Xamarin.Forms.UWP.Tests/Sentry.Xamarin.Forms.UWP.Tests.csproj
@@ -123,8 +123,9 @@
     <Compile Include="Internals\FormsEventProcessorTests.cs" />
     <Compile Include="Internals\NativeEventProcessorTests.cs" />
     <Compile Include="Internals\NativeIntegrationTests.cs" />
+    <Compile Include="Internals\SentryXamarinFormsIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SentryXamarinFormsIntegrationTests.cs" />
+    <Compile Include="SentryXamarinIntegrationTests.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
@@ -183,6 +184,10 @@
     <ProjectReference Include="..\..\Src\Sentry.Xamarin\Sentry.Xamarin.csproj">
       <Project>{c911dd4b-bcdc-4d76-83d1-dc40379df816}</Project>
       <Name>Sentry.Xamarin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sentry.Xamarin.Forms.Testing\Sentry.Xamarin.Forms.Testing.csproj">
+      <Project>{7375e34b-2936-41d2-8dbd-a745bdc1662e}</Project>
+      <Name>Sentry.Xamarin.Forms.Testing</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
