--- a/Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
+++ b/Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="SplashActivity.cs" />
+    <Compile Include="Tools\ImageResizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
