--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,30 +20,50 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Setup .NET SDK (v2.1)
+          uses: actions/setup-dotnet@v1.7.2
+          with:
+            dotnet-version: '2.1.809'
+
+      - name: Setup .NET SDK (v3.1)
+          uses: actions/setup-dotnet@v1.7.2
+          with:
+            dotnet-version: '3.1.401'
+
+      - name: Setup .NET SDK (v5.0)
+          uses: actions/setup-dotnet@v1.7.2
+          with:
+            dotnet-version: '5.0.100'
+
+      
       - uses: nuget/setup-nuget@v1
       - run: nuget restore Sentry.Xamarin.sln
-      - uses: microsoft/setup-msbuild@v1.0.2
-        if: matrix.os == 'windows-latest'
+         - uses: microsoft/setup-msbuild@v1.0.2
+           if: matrix.os == 'windows-latest'
       - name: Build Solution with MSBuild
-        run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
+           run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
       - name: Build iOS Sample app
-        run: msbuild Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj
-        if: matrix.os == 'macos-latest'
+           run: msbuild Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj
+           if: matrix.os == 'macos-latest'
       - name: Build Android Sample app
-        run: msbuild Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
-        if: matrix.os == 'windows-latest'
+           run: msbuild Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
+           if: matrix.os == 'windows-latest'
       - name: Build UWP Sample app
-        run: msbuild Samples/Sample.Xamarin.UWP/Sample.Xamarin.UWP.csproj /p:Platform=x64 /p:Configuration=Release
-        if: matrix.os == 'windows-latest'
+           run: msbuild Samples/Sample.Xamarin.UWP/Sample.Xamarin.UWP.csproj /p:Platform=x64 /p:Configuration=Release
+           if: matrix.os == 'windows-latest'
       - name: Build UWP Test Project
-        run: msbuild Tests/Sentry.Xamarin.Forms.UWP.Tests/Sentry.Xamarin.Forms.UWP.Tests.csproj /p:Platform=x64 /p:Configuration=Release
-        if: matrix.os == 'windows-latest'
+           run: msbuild Tests/Sentry.Xamarin.Forms.UWP.Tests/Sentry.Xamarin.Forms.UWP.Tests.csproj /p:Platform=x64 /p:Configuration=Release
+           if: matrix.os == 'windows-latest'
       - name: Setup VS Test
-        uses: darenm/Setup-VSTest@v1
-        if: matrix.os == 'windows-latest'
+           uses: darenm/Setup-VSTest@v1
+           if: matrix.os == 'windows-latest'
+       - name: Setup .NET Tests
+            run: dotnet test Test/Sentry.Xamarin.Tests/Sentry.Xamarin.Tests.csproj --no-restore --verbosity normal
+
       - name: Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ github.sha }}
-          path: |
-            ${{ github.workspace }}/src/**/Release/*.nupkg
+           uses: actions/upload-artifact@v2
+           with:
+             name: ${{ github.sha }}
+             path: |
+               ${{ github.workspace }}/src/**/Release/*.nupkg
