--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,8 @@ jobs:
         os: [windows-latest, macos-latest]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+          uses: actions/checkout@v2
       
       - name: Setup .NET SDK (v2.1)
           uses: actions/setup-dotnet@v1.7.2
