--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,10 @@ jobs:
 
     steps:
       - name: Checkout
-          uses: actions/checkout@v2
+          uses: actions/checkout@v2.3.3
+          with:
+             submodules: recursive
+             fetch-depth: 2 # default is 1 and codecov needs > 1
       
       - name: Setup .NET SDK (v2.1)
           uses: actions/setup-dotnet@v1.7.2
