--- a/Samples/Sample.Xamarin.Droid/Properties/AndroidManifest.xml
+++ b/Samples/Sample.Xamarin.Droid/Properties/AndroidManifest.xml
@@ -3,4 +3,5 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
 	<application android:label="Sample.Xamarin.Droid" android:theme="@style/MainTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<meta-data android:name="io.sentry.dsn" android:value="https://5a193123a9b841bc8d8e42531e7242a1@o447951.ingest.sentry.io/5560112" />
 </manifest>
