--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -52,7 +52,7 @@
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
 		<Compile Include="Internals\*.droid.cs" />
 		<ProjectReference Include="..\libraries\droid\io.sentry\io.sentry.csproj" />
-		<ProjectReference Include="..\libraries\droid\io.sentry.sentry-android\io.sentry.sentry-android.csproj" />
+		<ProjectReference Include="..\libraries\droid\io.sentry.sentry-android\io.sentry.android.core.csproj" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
