Add android NDK and code cleanup

--- a/Src/libraries/droid/io.sentry.sentry-android/io.sentry.android.core.csproj
+++ b/Src/libraries/droid/io.sentry.sentry-android/io.sentry.android.core.csproj
@@ -47,19 +47,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Additions\AboutAdditions.txt" />
     <LibraryProjectZip Include="Jars\sentry-android-core-5.0.0-beta.3.aar" />
-  </ItemGroup>
-  <ItemGroup>
-    <TransformFile Include="Transforms\Metadata.xml" />
-    <TransformFile Include="Transforms\EnumFields.xml" />
-    <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\io.sentry\io.sentry.csproj">
       <Project>{5cfa5829-4854-4085-b836-69a8db0a0c10}</Project>
       <Name>io.sentry</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Additions\" />
+    <Folder Include="Transforms\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
