--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -53,6 +53,7 @@
 		<Compile Include="Internals\*.droid.cs" />
 		<ProjectReference Include="..\libraries\droid\io.sentry\io.sentry.csproj" />
 		<ProjectReference Include="..\libraries\droid\io.sentry.sentry-android\io.sentry.android.core.csproj" />
+		<ProjectReference Include="..\libraries\droid\io.sentry.android.ndk\io.sentry.android.ndk.csproj" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
