--- a/Src/libraries/droid/io.sentry.android.ndk/io.sentry.android.ndk.csproj
+++ b/Src/libraries/droid/io.sentry.android.ndk/io.sentry.android.ndk.csproj
@@ -5,13 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5CFA5829-4854-4085-B836-69A8DB0A0C10}</ProjectGuid>
+    <ProjectGuid>{33570A5E-F9BE-4354-983B-6BB8906CD018}</ProjectGuid>
     <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>io.sentry</RootNamespace>
-    <AssemblyName>io.sentry</AssemblyName>
+    <RootNamespace>io.sentry.android.ndk</RootNamespace>
+    <AssemblyName>io.sentry.android.ndk</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <Deterministic>True</Deterministic>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
@@ -38,25 +38,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="GoogleGson">
-      <Version>2.8.5</Version>
-    </PackageReference>
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <PackageReference Remove="Sentry" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <TransformFile Include="Transforms\Metadata.xml" />
+    <LibraryProjectZip Include="Jars\sentry-android-ndk-5.0.0-beta.3.aar" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedJar Include="Jars\sentry-5.0.0-beta.3.jar" />
+    <ProjectReference Include="..\io.sentry.sentry-android\io.sentry.android.core.csproj">
+      <Project>{e550f170-c130-47d4-978b-926914cc7c59}</Project>
+      <Name>io.sentry.android.core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\io.sentry\io.sentry.csproj">
+      <Project>{5cfa5829-4854-4085-b836-69a8db0a0c10}</Project>
+      <Name>io.sentry</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Additions\" />
+    <Folder Include="Transforms\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
