--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -34,11 +34,13 @@
 		<Compile Remove="Internals\*.ios.cs" />
 		<Compile Remove="Internals\*.droid.cs" />
 		<Compile Remove="Internals\*.uwp.cs" />
+		<Compile Remove="Extensions\*.droid.cs" />
 
 		<None Include="Internals\*.netstandard.cs" />
 		<None Include="Internals\*.ios.cs" />
 		<None Include="Internals\*.droid.cs" />
 		<None Include="Internals\*.uwp.cs" />
+		<None Include="Extensions\*.droid.cs" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -51,6 +53,7 @@
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
 		<Compile Include="Internals\*.droid.cs" />
+		<Compile Include="Extensions\*.droid.cs" />
 		<ProjectReference Include="..\libraries\droid\io.sentry\io.sentry.csproj" />
 		<ProjectReference Include="..\libraries\droid\io.sentry.sentry-android\io.sentry.android.core.csproj" />
 		<ProjectReference Include="..\libraries\droid\io.sentry.android.ndk\io.sentry.android.ndk.csproj" />
