--- a/Src/libraries/droid/io.sentry.sentry-android/io.sentry.android.core.csproj
+++ b/Src/libraries/droid/io.sentry.sentry-android/io.sentry.android.core.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SentryAndroid.cs" />
   </ItemGroup>
   <ItemGroup>
     <LibraryProjectZip Include="Jars\sentry-android-core-5.0.0-beta.3.aar" />
