--- a/Src/libraries/droid/io.sentry/io.sentry.csproj
+++ b/Src/libraries/droid/io.sentry/io.sentry.csproj
@@ -58,6 +58,9 @@
   <ItemGroup>
     <Folder Include="Additions\" />
   </ItemGroup>
+  <ItemGroup>
+    <TransformFile Include="Transforms\EnumFields.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
