--- a/.craft.yml
+++ b/.craft.yml
@@ -1,20 +1,9 @@
-minVersion: '0.13.2'
-github:
-  owner: getsentry
-  repo: sentry-xamarin
+minVersion: 0.23.1
 changelogPolicy: auto
-statusProvider:
-  name: github
-artifactProvider:
-  name: github
 targets:
   - name: nuget
   - name: github
   - name: registry
-    type: sdk
-    config:
-      canonical: "nuget:Sentry.Xamarin"
-  - name: registry
-    type: sdk
-    config:
-      canonical: "nuget:Sentry.Xamarin.Forms"
+    sdks:
+      nuget:Sentry.Xamarin:
+      nuget:Sentry.Xamarin.Forms:
