--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-dotnet@v1.7.2
+        with:
+              dotnet-version: '5.0.100'
       - uses: nuget/setup-nuget@v1
       - run: nuget restore Sentry.Xamarin.sln
       - uses: microsoft/setup-msbuild@v1.0.2
