Add Session Start/Pause for ios and droid

--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -63,4 +63,15 @@
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) ">
 		<Compile Include="Internals\*.netstandard.cs" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Internals\Session\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Internals\Session\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Update="Internals\Session\IDeviceActiveLogger.cs">
+	    <SubType></SubType>
+	  </Compile>
+	</ItemGroup>
 </Project>
