add Auto Session for Droid and UWP

--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -30,15 +30,15 @@
 	</PropertyGroup>	
 	
 	<ItemGroup>	
-		<Compile Remove="Internals\*.netstandard.cs" />
-		<Compile Remove="Internals\*.ios.cs" />
-		<Compile Remove="Internals\*.droid.cs" />
-		<Compile Remove="Internals\*.uwp.cs" />
+		<Compile Remove="Internals\**\*.netstandard.cs" />
+		<Compile Remove="Internals\**\*.ios.cs" />
+		<Compile Remove="Internals\**\*.droid.cs" />
+		<Compile Remove="Internals\**\*.uwp.cs" />
 
-		<None Include="Internals\*.netstandard.cs" />
-		<None Include="Internals\*.ios.cs" />
-		<None Include="Internals\*.droid.cs" />
-		<None Include="Internals\*.uwp.cs" />
+		<None Include="Internals\**\*.netstandard.cs" />
+		<None Include="Internals\**\*.ios.cs" />
+		<None Include="Internals\**\*.droid.cs" />
+		<None Include="Internals\**\*.uwp.cs" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -46,32 +46,21 @@
 	</ItemGroup>
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
-		<Compile Include="Internals\*.ios.cs" />
+		<Compile Include="Internals\**\*.ios.cs" />
 		<PackageReference Include="System.Memory" Version="4.5.4" />
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
-		<Compile Include="Internals\*.droid.cs" />
+		<Compile Include="Internals\**\*.droid.cs" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
-		<Compile Include="Internals\*.uwp.cs" />
+		<Compile Include="Internals\**\*.uwp.cs" />
 		<PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.9" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) ">
-		<Compile Include="Internals\*.netstandard.cs" />
-	</ItemGroup>
-	<ItemGroup>
-	  <None Remove="Internals\Session\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Internals\Session\" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Compile Update="Internals\Session\IDeviceActiveLogger.cs">
-	    <SubType></SubType>
-	  </Compile>
+		<Compile Include="Internals\**\*.netstandard.cs" />
 	</ItemGroup>
 </Project>
