--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
               dotnet-version: '5.0.100'
       - uses: nuget/setup-nuget@v1
-      - run: dotnet msbuild Sentry.Xamarin.sln -p:Configuration=Release /t:restore
+      - run: dotnet msbuild Sentry.Xamarin.sln /restore
       - uses: microsoft/setup-msbuild@v1.0.2
         if: matrix.os == 'windows-latest'
       - name: Build Solution with MSBuild
