--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
               dotnet-version: '5.0.100'
       - uses: nuget/setup-nuget@v1
       - uses: microsoft/setup-msbuild@v1.1
-        if: matrix.os == 'windows-latest'
+        #if: matrix.os == 'windows-latest'
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
       - name: Build Solution with MSBuild
         run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
