--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,18 +22,20 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1.7.2
         with:
-              dotnet-version: '5.0.100'
-      - uses: nuget/setup-nuget@v1
-      - run: nuget restore Sentry.Xamarin.sln
+          dotnet-version: '5.0.100'
       - uses: microsoft/setup-msbuild@v1.0.2
         if: matrix.os == 'windows-latest'
+      - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
       - name: Build Solution with MSBuild
         run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
+      - name: Restore iOS Sample app NuGet
+        run: msbuild Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj -p:Configuration=Release -t:restore
+        if: matrix.os == 'macos-latest'
       - name: Build iOS Sample app
-        run: msbuild Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj
+        run: msbuild Samples/Sample.Xamarin.iOS/Sample.Xamarin.iOS.csproj -p:Configuration=Release
         if: matrix.os == 'macos-latest'
       - name: Build Android Sample app
-        run: msbuild Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj
+        run: msbuild Samples/Sample.Xamarin.Droid/Sample.Xamarin.Droid.csproj -p:Configuration=Release
         if: matrix.os == 'windows-latest'
       - name: Build UWP Sample app
         run: msbuild Samples/Sample.Xamarin.UWP/Sample.Xamarin.UWP.csproj /p:Platform=x64 /p:Configuration=Release
