--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,17 +16,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [windows-2019, macos-latest]
 
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1.7.2
         with:
           dotnet-version: '5.0.100'
-      - uses: GuillaumeFalourd/setup-windows10-sdk-action@v1
-        if: matrix.os == 'windows-latest'
-        with:
-          sdk-version: 16299      
       - uses: microsoft/setup-msbuild@v1.0.2
         if: matrix.os == 'windows-latest'
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
