--- a/Src/Directory.Build.props
+++ b/Src/Directory.Build.props
@@ -23,8 +23,6 @@
     <PackageProjectUrl>https://sentry.io</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    
-    <None Include="$(MSBuildThisFileDirectory)../README.md" Pack="true" PackagePath=""/>
 
     <PackageReleaseNotes>Can be found at: https://github.com/getsentry/sentry-xamarin/releases</PackageReleaseNotes>
 
@@ -52,6 +50,7 @@
 
   <ItemGroup>
     <None Include="../../.assets/sentry-nuget.png" Pack="true" PackagePath=""/>
+    <None Include="../../README.md" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <ItemGroup>
