--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -42,6 +42,7 @@
 	</ItemGroup>	
 
 	<ItemGroup>
+		<PackageReference Include="Sentry" Version="3.27.0" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 	</ItemGroup>
 
