--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -43,6 +43,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Sentry" Version="3.27.0" />
+		<PackageReference Include="Sentry.Android.AssemblyReader" Version="1.0.0" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 	</ItemGroup>
 
