Added support for Xamarin.Mac applications.
* Added support for Xamarin.Mac applications
* Added a Xamarin.Mac sample

--- a/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
+++ b/Src/Sentry.Xamarin/Sentry.Xamarin.csproj
@@ -3,7 +3,7 @@
 	    <!--Generate xml docs for all projects under 'src'-->
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-		<TargetFrameworks>netstandard2.0;monoandroid9.0;Xamarinios10;</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;monoandroid9.0;Xamarinios10;xamarinmac20</TargetFrameworks>
 		<TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">$(TargetFrameworks);uap10.0.16299;</TargetFrameworks>
 		<NoWarn Condition="$(TargetFramework) == 'netstandard2.0'">$(NoWarn);RS0017</NoWarn>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -18,32 +18,49 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" $(TargetFramework.StartsWith('Xamarinios')) ">
-		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR</DefineConstants>
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR;LIFECYCLE_PROCESSOR</DefineConstants>
 	</PropertyGroup>
 
-	<PropertyGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
+	<PropertyGroup Condition=" $(TargetFramework.StartsWith('xamarinmac')) ">
 		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR</DefineConstants>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR;LIFECYCLE_PROCESSOR</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.StartsWith('uap'))">
-		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR</DefineConstants>
+		<DefineConstants>$(DefineConstants);NATIVE_PROCESSOR;LIFECYCLE_PROCESSOR</DefineConstants>
 	</PropertyGroup>	
 	
 	<ItemGroup>	
 		<Compile Remove="Internals\**\*.netstandard*.cs" />
 		<Compile Remove="Internals\**\*.ios*.cs" />
+		<Compile Remove="Internals\**\*.mac*.cs" />
 		<Compile Remove="Internals\**\*.droid*.cs" />
 		<Compile Remove="Internals\**\*.uwp*.cs" />
 
 		<None Include="Internals\**\*.netstandard*.cs" />
 		<None Include="Internals\**\*.ios*.cs" />
+		<None Include="Internals\**\*.mac*.cs" />
 		<None Include="Internals\**\*.droid*.cs" />
 		<None Include="Internals\**\*.uwp*.cs" />
+		<Compile Update="Internals\NativeIntegration.mac.cs">
+		  <SubType>Code</SubType>
+		</Compile>
+		<Compile Update="Internals\NativeEventProcessor.mac.cs">
+		  <SubType>Code</SubType>
+		</Compile>
+		<Compile Update="Internals\NativeExceptionProcessor.mac.cs">
+		  <SubType>Code</SubType>
+		</Compile>
+		<Compile Update="Internals\NativeExceptionProcessor.mac.cs">
+		  <SubType>Code</SubType>
+		</Compile>
 	</ItemGroup>	
 
 	<ItemGroup>
 		<PackageReference Include="Sentry" Version="3.27.1" />
-		<PackageReference Include="Sentry.Android.AssemblyReader" Version="1.0.0" />
 		<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 	</ItemGroup>
 
@@ -53,8 +70,15 @@
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
 	</ItemGroup>
 
+	<ItemGroup Condition=" $(TargetFramework.StartsWith('xamarinmac')) ">
+		<Compile Include="Internals\**\*.mac*.cs" />
+		<PackageReference Include="System.Memory" Version="4.5.4" />
+		<PackageReference Include="System.Buffers" Version="4.5.1" />
+	</ItemGroup>
+	
 	<ItemGroup Condition=" $(TargetFramework.StartsWith('monoandroid')) ">
 		<Compile Include="Internals\**\*.droid*.cs" />
+		<PackageReference Include="Sentry.Android.AssemblyReader" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap'))">
