--- a/Samples/Sample.Xamarin.Droid/Properties/AndroidManifest.xml
+++ b/Samples/Sample.Xamarin.Droid/Properties/AndroidManifest.xml
@@ -1,11 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-		  android:versionCode="1" 
-		  android:versionName="1.0" 
-		  package="com.companyname.Sample.Xamarin.Droid" 
-		  android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
-	<application android:label="Sample.Xamarin.Droid" 
-				 android:theme="@style/MainTheme"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.Sample.Xamarin.Droid" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
+	<application android:label="Sample.Xamarin.Droid" android:theme="@style/MainTheme" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
