--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,12 +17,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, macos-latest] # Stay on 2019 for Windows SDK Version 10.0.16299.0
-
     steps:
       - uses: actions/checkout@v3
       - uses: microsoft/setup-msbuild@v1.1
         if: startsWith(matrix.os, 'windows')
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
+      - if: startsWith(matrix.os, 'windows')
+      - uses: fbactions/setup-winsdk@v1
+        with:
+            winsdk-build-version: 16299
       - name: Build Solution with MSBuild
         run: msbuild Sentry.Xamarin.sln -p:Configuration=Release
       - name: Restore iOS Sample app NuGet
