--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,9 +22,9 @@ jobs:
       - uses: microsoft/setup-msbuild@v1.1
         if: startsWith(matrix.os, 'windows')
       - name: Install Windows 10 SDK
-        uses: fbactions/setup-winsdk@v1
+      - uses: GuillaumeFalourd/setup-windows10-sdk-action@v1.11
         with:
-            winsdk-build-version: 16299.91
+            sdk-version: 16299
         if: startsWith(matrix.os, 'windows')
       - run: msbuild Sentry.Xamarin.sln -p:Configuration=Release -t:restore
       - name: Build Solution with MSBuild
